SSCSFT-96 Notification to Appellant